[CNDIT-1253] Moving json generation to common module (#69)
* Json generation moved to common module

* Adding libs folder for local testing

* Observation model update

* Investigation confirmation method updates

* Clean up on pre-processing services

* Cleaned up pre-processing services

* CNDIT-1253 Fix service unit test for new model

* Addressing PR comments

---------

Co-authored-by: Upasana Pattnaik <UpasanaPattnaik@upasana-pattnaik.lan>
Co-authored-by: Sergei Veselev <sveselev@enquizit.com>